# amigo_launch_files

./: CMakeLists.txt  localization.launch  mainpage.dox  manifest.xml  package.xml  sensors.launch  start.launch  text_to_speech.launch  tue-manifest.xml
actuators/: rgb.launch
camera_info/: depth_A00363811144047A.yaml  rgb_A00363811144047A.yaml
launch/: autostart.launch  start.launch
launch/REworkshop2012/: START.launch  articulation.launch  handle_detection.launch  re_comm.launch  start_workshop.launch  vslam.launch
launch/actuators/: all_etherCAT_hardware.launch  all_etherCAT_hardware_no_exit.launch  all_etherCAT_hardware_nopera.launch  all_etherCAT_hardware_pera.launch  all_etherCAT_hardware_profile.launch  all_hardware.launch  arm_controllers.launch  arm_left_controller.launch  arm_right_controller.launch  arm_right_controller_e.launch  arms.launch  base.launch  controller_enabler.launch  elpera.launch  erpera.launch  etherCAT.launch  head.launch  load_all_etherCAT_hardware.launch  rgb.launch  rightarm_dev.launch  spindle.launch  spindle2.launch
launch/apps/: amcl_navigate.launch  amcl_navigate_kinect.launch  amigo_middleware.launch  arms.launch  (+4 more)
parameters/: costmap_common_params.yaml  costmap_common_params_follow_me.yaml  costmap_global_params.yaml  costmap_global_params_follow_me.yaml  costmap_local_params.yaml  global_costmap_kinect.yaml  global_costmap_laser.yaml  local_costmap_kinect.yaml  local_costmap_laser.yaml  move_base.yaml  move_base_follow_me.yaml  teleop.yaml  world_object_models.xml
sensors/: all_sensors.launch  base_laser.launch
(+106 files in other folders)
