<?xml version="1.0"?>
<package>
  <name>amigo_launch_files</name>
  <version>0.0.0</version>
  <description>The amigo_launch_files package</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>amigo_description</build_depend>
  <run_depend>amigo_description</run_depend>

  <build_depend>amigo_diagnostics</build_depend>
  <run_depend>amigo_diagnostics</run_depend>

  <build_depend>challenge_logger</build_depend>
  <run_depend>challenge_logger</run_depend>

</package>
