<?xml version="1.0"?>
<package>
  <name>amigo_launch_files</name>
  <version>0.0.0</version>
  <description>The amigo_launch_files package</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
